--- a/BiteMeClient/src/ClientGUI/ActivationConfirmation.fxml
+++ b/BiteMeClient/src/ClientGUI/ActivationConfirmation.fxml
@@ -2,18 +2,20 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="700.0" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ActivationConfirmationController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="blue-gradient-1, activation-confirmation-page" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ActivationConfirmationController">
    <children>
-      <VBox alignment="CENTER" layoutX="0.0" layoutY="60.0" prefWidth="700.0" spacing="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         <children>
-            <Text fx:id="headlineText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-text" text="Customer Activation Confirmation" />
-            <Text fx:id="infoText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="info-text" text="Customer Information" />
-         </children>
+      <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <Text fx:id="headlineText" styleClass="headline-text" text="Customer Activation Confirmation" />
+      </HBox>
+      
+      <VBox alignment="CENTER" spacing="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="100.0">
+         <Text fx:id="infoText" styleClass="info-text" text="Customer Information" textAlignment="CENTER" wrappingWidth="760.0" />
       </VBox>
       
-      <Button fx:id="returnButton" layoutX="254.0" layoutY="550.0" mnemonicParsing="false" onAction="#returnToHomePage" prefHeight="50.0" prefWidth="193.0" text="Return to Home Page" />
+      <Button fx:id="returnButton" mnemonicParsing="false" onAction="#returnToHomePage" prefHeight="50.0" prefWidth="200.0" styleClass="action-button" text="Return to Home Page" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="300.0" />
    </children>
 </AnchorPane>
