--- a/BiteMeClient/src/ClientGUI/MyOrders.fxml
+++ b/BiteMeClient/src/ClientGUI/MyOrders.fxml
@@ -35,5 +35,6 @@
             <Font size="14.0" />
          </font>
       </Button>
+      <Button fx:id = "RefreshListButton" layoutX="676.0" layoutY="10.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" text="REFRESH LIST" onAction="#handleRefreshButton"/>
     </children>
 </AnchorPane>
