--- a/BiteMeClient/src/ClientGUI/ClientConnect.fxml
+++ b/BiteMeClient/src/ClientGUI/ClientConnect.fxml
@@ -19,13 +19,13 @@
          <VBox alignment="CENTER" spacing="20">
             <VBox alignment="CENTER" spacing="10">
                <Text styleClass="input-label" text="Enter server IP:" />
-               <TextField fx:id="serverIpTextField" styleClass="text-field" maxWidth="300.0" promptText="Enter IP address" />
+               <TextField fx:id="serverIpTextField" maxWidth="300.0" promptText="Enter IP address" styleClass="text-field" />
                
                <Text styleClass="input-label" text="Enter server Port:" />
-               <TextField fx:id="serverPortTextField" styleClass="text-field" maxWidth="300.0" promptText="Enter port number" text="5555" />
+               <TextField fx:id="serverPortTextField" maxWidth="300.0" promptText="Enter port number" styleClass="text-field" text="5555" />
             </VBox>
             
-            <Text fx:id="ErrorTextConnect" fill="RED" textAlignment="CENTER" visible="false" wrappingWidth="719.3332848548889" />
+            <Text fx:id="ErrorTextConnect" fill="RED" text="error" textAlignment="CENTER" visible="false" wrappingWidth="719.3332848548889" />
             
             <HBox alignment="CENTER" spacing="50">
                <Button fx:id="connectButton" mnemonicParsing="false" onAction="#handleConnectButtonAction" prefHeight="100.0" prefWidth="180.0" text="Connect" />
