--- a/BiteMeClient/src/ClientGUI/ReportsPage.fxml
+++ b/BiteMeClient/src/ClientGUI/ReportsPage.fxml
@@ -12,56 +12,57 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ReportsPageController">
+<AnchorPane prefHeight="600.0" prefWidth="800" styleClass="blue-gradient-1, reports-page" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.ReportsPageController">
    <children>
-      <Button fx:id="backButton" layoutX="20.0" layoutY="20.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handleBackButton" styleClass="logout-button" text="Back" />
+      <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <Text fx:id="headlineText" styleClass="headline-text" text="Report Menu" />
+         <HBox HBox.hgrow="ALWAYS" />
+         <Button fx:id="backButton" layoutX="20.0" layoutY="20.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handleBackButton" styleClass="logout-button" text="Back" />
+      </HBox>
       
       <ComboBox fx:id="branchDropdown" layoutX="550.0" layoutY="20.0" promptText="Select Branch" />
-      <Text fx:id="headlineText" layoutX="280.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Report Menu" textAlignment="CENTER">
+      
+         <Label fx:id="errorMessageLabel" alignment="CENTER" layoutX="5.0" layoutY="530.0" maxWidth="794.0" prefHeight="20.0" prefWidth="794.0" styleClass="error-text" textAlignment="CENTER" textFill="RED" wrapText="true">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      
+         <GridPane fx:id="reportsGridPane" alignment="CENTER" hgap="20" layoutX="33.0" layoutY="146.0" prefHeight="343.0" prefWidth="734.0" vgap="20">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         
+            <VBox alignment="TOP_CENTER" spacing="15" GridPane.columnIndex="0">
+            <Text fx:id="monthlyReportTitle" styleClass="sub-headline-text" text="Monthly Reports" />
+            <VBox fx:id="monthlyReportButtons" alignment="CENTER" spacing="15">
+               <Button fx:id="revenueReportButton" onAction="#handleRevenueReport" prefHeight="80.0" prefWidth="190.0" text="Revenue&#10;Report" />
+               <Button fx:id="performanceReportButton" onAction="#handlePerformanceReport" prefHeight="80.0" prefWidth="190.0" text="Performance&#10;Report" />
+               <Button fx:id="ordersReportButton" onAction="#handleOrdersReport" prefHeight="80.0" prefWidth="190.0" text="Orders&#10;Report" />
+            </VBox>
+            <HBox alignment="CENTER" spacing="10">
+               <ComboBox fx:id="monthDropdown" promptText="Month" />
+               <ComboBox fx:id="yearDropdown" promptText="Year"/>
+            </HBox>
+         </VBox>
+         
+            <VBox fx:id="quarterlyReportSection" alignment="TOP_CENTER" spacing="15" GridPane.columnIndex="1">
+            <Text styleClass="sub-headline-text" text="Quarterly Reports" />
+            <Button fx:id="quarterlyReportButton" onAction="#handleQuarterlyReport" prefHeight="80.0" prefWidth="190.0" text="CEO Quarterly&#10;Report" />
+            <HBox alignment="CENTER" spacing="10">
+               <ComboBox fx:id="quarterDropdown" promptText="Quarter" />
+               <ComboBox fx:id="quarterYearDropdown" promptText="Year"/>
+            </HBox>
+         </VBox>
+         <rowConstraints>
+            <RowConstraints />
+         </rowConstraints>
+      </GridPane>
+      <Text fx:id="headlineText" layoutX="146.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-text" text="Choose a Report" textAlignment="CENTER" wrappingWidth="511.61767578125">
          <font>
             <Font size="36.0" />
          </font>
       </Text>
-      
-      <VBox alignment="CENTER" layoutY="102.0" prefWidth="700.0" spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         
-         <GridPane fx:id="reportsGridPane" alignment="CENTER" hgap="20" vgap="20">
-            <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            
-            <VBox alignment="TOP_CENTER" spacing="15" GridPane.columnIndex="0">
-               <Text fx:id="monthlyReportTitle" style="-fx-font-size: 24; -fx-font-weight: bold;" text="Monthly Reports" />
-               <VBox fx:id="monthlyReportButtons" alignment="CENTER" spacing="15">
-                  <Button fx:id="revenueReportButton" onAction="#handleRevenueReport" prefHeight="80.0" prefWidth="194.0" text="Revenue Report" />
-                  <Button fx:id="performanceReportButton" onAction="#handlePerformanceReport" prefHeight="80.0" prefWidth="192.0" text="Performance Report" />
-                  <Button fx:id="ordersReportButton" onAction="#handleOrdersReport" prefHeight="80.0" prefWidth="189.0" text="Orders Report" />
-               </VBox>
-               <HBox alignment="CENTER" spacing="10">
-                  <ComboBox fx:id="monthDropdown" promptText="Month" />
-                  <ComboBox fx:id="yearDropdown" promptText="Year" />
-               </HBox>
-            </VBox>
-            
-            <VBox fx:id="quarterlyReportSection" alignment="TOP_CENTER" spacing="15" GridPane.columnIndex="1">
-               <Text style="-fx-font-size: 24; -fx-font-weight: bold;" text="Quarterly Reports" />
-               <Button fx:id="quarterlyReportButton" onAction="#handleQuarterlyReport" prefHeight="80.0" prefWidth="191.0" text="CEO Quarterly Report" />
-               <HBox alignment="CENTER" spacing="10">
-                  <ComboBox fx:id="quarterDropdown" promptText="Quarter" />
-                  <ComboBox fx:id="quarterYearDropdown" promptText="Year" />
-               </HBox>
-            </VBox>
-            <rowConstraints>
-               <RowConstraints />
-            </rowConstraints>
-         </GridPane>
-         
-         <Label fx:id="errorMessageLabel" alignment="CENTER" maxWidth="715.0" prefHeight="20.0" prefWidth="715.0" textAlignment="CENTER" textFill="RED" wrapText="true">
-            <font>
-               <Font size="14.0" />
-            </font>
-         </Label>
-      </VBox>
    </children>
 </AnchorPane>
