--- a/BiteMeSrv/src/ServerGUI/server.fxml
+++ b/BiteMeSrv/src/ServerGUI/server.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="700.0" stylesheets="@server.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ServerGUI.serverController">
+<AnchorPane prefHeight="600.0" prefWidth="800" stylesheets="@server.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ServerGUI.serverController">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="712.0" prefWidth="385.0" spacing="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="341.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="14.0" prefHeight="600" prefWidth="385.0" spacing="20.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="327.3333333333333" AnchorPane.topAnchor="14.0">
          <children>
             <Text fx:id="headlineText" text="Server">
                <font>
@@ -28,7 +28,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <GridPane alignment="CENTER" hgap="10" vgap="10">
+            <GridPane alignment="CENTER" hgap="10" prefHeight="185.0" prefWidth="448.0" vgap="10">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
@@ -50,7 +50,7 @@
                   <Label text="DB user:" GridPane.rowIndex="3" />
                   <TextField fx:id="DBuser" text="root" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <Label text="DB password:" GridPane.rowIndex="4" />
-                  <PasswordField fx:id="DBPassword" text="Aa123456" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <PasswordField fx:id="DBPassword" prefHeight="21.0" prefWidth="252.0" text="Aa123456" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                </children>
             </GridPane>
             <Label fx:id="ErrorServerInput" textFill="RED" visible="false" />
@@ -58,16 +58,16 @@
             <HBox alignment="CENTER" spacing="20">
                <children>
                   <Button fx:id="connectButton" onAction="#handleConnectButton" text="Connect" />
-                  <Button fx:id="disconnectButton" onAction="#handleDisconnectButton" text="Disconnect" />
+                  <Button fx:id="disconnectButton" disable="true" onAction="#handleDisconnectButton" text="Disconnect" />
                   <Button fx:id="quitButton" onAction="#handleQuitButton" styleClass="logout-button" text="Quit" />
                </children>
             </HBox>
          </children>
       </VBox>
-      <ListView fx:id="clientsListView" layoutX="416.0" layoutY="171.0" prefHeight="541.0" prefWidth="310.0" />
-      <Label layoutX="517.0" layoutY="152.0" text="Connected Clients" />
+      <ListView fx:id="clientsListView" layoutX="490.0" layoutY="162.0" prefHeight="541.0" prefWidth="310.0" />
+      <Label layoutX="491.0" layoutY="139.0" text="Connected Clients" />
       <HBox alignment="CENTER" layoutX="436.0" layoutY="114.0" spacing="20" />
-      <Label layoutX="341.0" layoutY="115.0" prefHeight="11.0" prefWidth="89.0" text="Server Status:" />
-      <Label fx:id="statusLabel" layoutX="436.0" layoutY="115.0" text="Stopped" />
+      <Label layoutX="492.0" layoutY="114.0" prefHeight="11.0" prefWidth="89.0" text="Server Status:" />
+      <Label fx:id="statusLabel" layoutX="587.0" layoutY="114.0" text="Stopped" />
    </children>
 </AnchorPane>
