--- a/BiteMeClient/src/ClientGUI/HomeBranchChange.fxml
+++ b/BiteMeClient/src/ClientGUI/HomeBranchChange.fxml
@@ -3,36 +3,26 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.HomeBranchChange">
+<AnchorPane prefHeight="600" prefWidth="800" styleClass="blue-gradient-1" stylesheets="@client.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientGUI.HomeBranchChange">
    <children>
-      <Button fx:id="backButton" layoutX="23.0" layoutY="20.0" mnemonicParsing="false" onAction="#handleBackButtonAction" text="Back">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
-      <Text fx:id="titleText" layoutX="247.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Branch Change">
-         <font>
-            <Font name="System Bold" size="30.0" />
-         </font>
-      </Text>
-      <Text fx:id="errorText" fill="RED" layoutX="62.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Changing Home Branch failed!" textAlignment="CENTER" visible="false" wrappingWidth="648.7239685058594">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Text layoutX="241.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please choose the new desired home branch:">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <ComboBox fx:id="homeBranchComboBox" layoutX="314.0" layoutY="228.0" onAction="#handleComboBoxAction" prefHeight="36.0" prefWidth="175.0" />
-      <Text fx:id="successText" fill="#05aa44" layoutX="62.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home Branch Changed successfully!" textAlignment="CENTER" visible="false" wrappingWidth="648.7239685058594">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
+      <VBox spacing="20" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <HBox alignment="CENTER_LEFT" spacing="20" styleClass="header">
+            <Text fx:id="headlineText" styleClass="headline-text" text="Home Branch Change" />
+            <HBox HBox.hgrow="ALWAYS" />
+           <Button fx:id="backButton" mnemonicParsing="false" onAction="#handleBackButtonAction" styleClass="back-button" text="Back" />
+         </HBox>
+      </VBox>
+      
+      <Text layoutX="219.0" layoutY="199.0" styleClass="instruction-text" text="Please choose the new desired home branch:" AnchorPane.leftAnchor="219.0" AnchorPane.rightAnchor="236.0" />
+      
+      <ComboBox fx:id="homeBranchComboBox" layoutX="300.0" layoutY="250.0" onAction="#handleComboBoxAction" prefHeight="40.0" prefWidth="200.0" styleClass="combo-box" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="300.0" />
+      
+      <Text fx:id="errorText" fill="RED" layoutX="100.0" layoutY="350.0" styleClass="error-text" text="Changing Home Branch failed!" textAlignment="CENTER" visible="false" wrappingWidth="600.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
+      
+      <Text fx:id="successText" fill="#05aa44" layoutX="100.0" layoutY="350.0" styleClass="success-text" text="Home Branch Changed successfully!" textAlignment="CENTER" visible="false" wrappingWidth="600.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
    </children>
 </AnchorPane>
